--- a/lab_guide/00.fork_the_workshop_repo_to_your_github_account.md
+++ b/lab_guide/00.fork_the_workshop_repo_to_your_github_account.md
@@ -1,5 +1,5 @@
 # 00.Fork the workshop repo to your Github account
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/00Fork_the_workshop_repo_to_your_Github_account__j_q2Ty0vQL23BqyxYhqbRA)
+#### [Open guide in Scribe](https://scribehow.com/shared/00Fork_the_workshop_repo_to_your_Github_account__j_q2Ty0vQL23BqyxYhqbRA)
 
 
 1\. Navigate to [https://github.com/networktocode/autocon3-design-workshop](https://github.com/networktocode/autocon3-design-workshop)
