--- a/lab_guide/01.clone_the_workshop_repo_to_your_laptop.md
+++ b/lab_guide/01.clone_the_workshop_repo_to_your_laptop.md
@@ -1,5 +1,5 @@
 # 01.Clone the workshop repo to your laptop
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/01Clone_the_workshop_repo_to_your_laptop__WIBWi5HxQny64RiSxMOqDA)
+#### [Open guide in Scribe](https://scribehow.com/shared/01Clone_the_workshop_repo_to_your_laptop__WIBWi5HxQny64RiSxMOqDA)
 
 
 #### Clone the forked repo to your PC
