--- a/lab_guide/02.generate_a_personal_access_token_(pat).md
+++ b/lab_guide/02.generate_a_personal_access_token_(pat).md
@@ -1,5 +1,5 @@
 # 02.Generate a Personal Access Token (PAT)
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/02Generate_a_Personal_Access_Token_PAT__dN_Z-iJIQRy1_EjZ32vAYA)
+#### [Open guide in Scribe](https://scribehow.com/shared/02Generate_a_Personal_Access_Token_PAT__dN_Z-iJIQRy1_EjZ32vAYA)
 
 
 1\. Log into [https://github.com/](https://www.google.com/)
