--- a/lab_guide/07.prepare_nautobot.md
+++ b/lab_guide/07.prepare_nautobot.md
@@ -1,5 +1,5 @@
 # 07.Prepare Nautobot
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/07Prepare_Nautobot__8lsW04MKTeG3CZXpv3HvVQ)
+#### [Open guide in Scribe](https://scribehow.com/shared/07Prepare_Nautobot__8lsW04MKTeG3CZXpv3HvVQ)
 
 
 #### Log into Nautobot
