--- a/lab_guide/21.generate_intended_configurations.md
+++ b/lab_guide/21.generate_intended_configurations.md
@@ -1,5 +1,5 @@
 # 21.Generate intended configurations
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/21Generate_intended_configurations__Jts6VJ9aSFy-RAKS7cI0mA)
+#### [Open guide in Scribe](https://scribehow.com/shared/21Generate_intended_configurations__Jts6VJ9aSFy-RAKS7cI0mA)
 Use Golden Config to render configuration from Jinja2 templates
 
 #### Golden Config settings
