--- a/lab_guide/22.deploy_containerlab_topology.md
+++ b/lab_guide/22.deploy_containerlab_topology.md
@@ -1,5 +1,5 @@
 # 22.Deploy containerlab topology
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/22Deploy_containerlab_topology__cvi68h7-R5mwQwyIVFP5jw)
+#### [Open guide in Scribe](https://scribehow.com/shared/22Deploy_containerlab_topology__cvi68h7-R5mwQwyIVFP5jw)
 
 
 #### Configure startup-config location for containerlab
