--- a/lab_guide/31.run_nuts_tests_pt.1.md
+++ b/lab_guide/31.run_nuts_tests_pt.1.md
@@ -1,5 +1,5 @@
 # 31.Run NUTS tests pt.1
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/31Run_NUTS_tests_pt1__7YheV4iVStSf0yMgntrAfA)
+#### [Open guide in Scribe](https://scribehow.com/shared/31Run_NUTS_tests_pt1__7YheV4iVStSf0yMgntrAfA)
 
 
 1\. Navigate to [http://localhost:8080/](http://localhost:8080/)
