--- a/lab_guide/41.amend_the_config_templates_pt.1.md
+++ b/lab_guide/41.amend_the_config_templates_pt.1.md
@@ -1,5 +1,5 @@
 # 41.Amend the config templates pt.1
-#### [Made by Nikos Kallergis with Scribe](https://scribehow.com/shared/41Amend_the_config_templates_pt1__TmJ1JkQiQUqxowS-70TAcg)
+#### [Open guide in Scribe](https://scribehow.com/shared/41Amend_the_config_templates_pt1__TmJ1JkQiQUqxowS-70TAcg)
 
 
 1\. First, let's make sure that the changes that Nautobot has made have been pulled to our VS Code instance. To do so, click on the "refresh" button on the bottom bar.
