--- a/lab_guide/99.lab_guide.md
+++ b/lab_guide/99.lab_guide.md
@@ -7,6 +7,10 @@
 
 [02. Generate a Personal Access Token (PAT)](./02.generate_a_personal_access_token_(pat).md)
 
+[03.Connect to your dev machine](./03.connect_to_your_dev_machine.md)
+
+[04.Start Nautobot](./04.start_nautobot.md)
+
 [07. Prepare Nautobot](./07.prepare_nautobot.md)
 
 
@@ -15,12 +19,16 @@
 
 
 ## Chapter 2: Create a digital-twin with containerlab
+[20. Intro to containerlab](./20.intro_to_containerlab.md)
+
 [21. Generate intended configurations](./21.generate_intended_configurations.md)
 
 [22. Deploy containerlab topology](./22.deploy_containerlab_topology.md)
 
 
 ## Chapter 3: Test you network with NUTS
+[30.Introduction to NUTS](./30.introduction_to_nuts.md)
+
 [31. Run NUTS tests pt.1](./31.run_nuts_tests_pt.1.md)
 
 
