Chapter 40 and presentation 10

--- a/lab_guide/99.lab_guide.md
+++ b/lab_guide/99.lab_guide.md
@@ -33,6 +33,8 @@
 
 
 ## Chapter 4: Manage configurations with Golden Config
+[40.Introduction to Golden Config](./40.introduction_to_golden_config.md)
+
 [41. Amend the config templates pt.1](./41.amend_the_config_templates_pt.1.md)
 
 [42. Fun with config compliance and remediation pt.1](./42.fun_with_config_compliance_and_remediation_pt.1.md)
