Add lab guide 10

--- a/lab_guide/99.lab_guide.md
+++ b/lab_guide/99.lab_guide.md
@@ -15,6 +15,8 @@
 
 
 ## Chapter 1: Design stuff with Design Builder
+[10. Introduction to Design Builder](./10.introduction_to_design_builder.md)
+
 [11. Deploy a New Branch](./11.deploy_a_new_branch.md)
 
 
